Cleanup deprecation warnings. Fix Win32 build/run environment - use JFX_LIB environment variable